Bug 165342 - Crash when changing album sort modus
Summary: Crash when changing album sort modus
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-Sort (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-29 17:07 UTC by Thomas McGuire
Modified: 2025-12-25 10:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 9.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2008-06-29 17:07:41 UTC
Version:           0.10.0-svn (rev.: 819557) (using 4.00.84 (KDE 4.0.84 (KDE 4.1 >= 20080625), compiled sources)
Compiler:          gcc
OS:                Linux (i686) release 2.6.22.17-0.1-default

Digikam crashes when doing the following:

1. Importing some albums
2. Clicking View->Sort Albums->By Collection
3. Clicking View->Sort Albums->By Folder

Backtrace: (gdb) bt
#0  0xb51a719d in memmove () from /lib/libc.so.6
#1  0xb7e17f22 in QListData::remove () from /media/kdedev/trunk/qt-copy/lib/libQtCore.so.4
#2  0xb7e1802a in QListData::erase () from /media/kdedev/trunk/qt-copy/lib/libQtCore.so.4
#3  0x08213e4f in QList<Digikam::AlbumFolderViewItem*>::erase (this=0xa410d5c, it=@0xbf8dff1c)
    at /media/kdedev/trunk/qt-copy/include/QtCore/../../src/corelib/tools/qlist.h:390
#4  0x0820abeb in Digikam::AlbumFolderView::clearEmptyGroupItems (this=0xa415130)
    at /media/kdedev/trunk/src/KDE/graphics/digikam/digikam/albumfolderview.cpp:1503
#5  0x0820d887 in Digikam::AlbumFolderView::resort (this=0xa415130) at /media/kdedev/trunk/src/KDE/graphics/digikam/digikam/albumfolderview.cpp:1445
#6  0x08264105 in Digikam::DigikamView::slotSortAlbums (this=0x8445f90, order=0) at /media/kdedev/trunk/src/KDE/graphics/digikam/digikam/digikamview.cpp:620
#7  0x0826a2ba in Digikam::DigikamView::qt_metacall (this=0x8445f90, _c=QMetaObject::InvokeMetaMethod, _id=21, _a=0xbf8e00ac)
    at /media/kdedev/trunk/build/KDE/graphics/digikam/digikam/digikamview.moc:243
#8  0xb7ef8633 in QMetaObject::activate () from /media/kdedev/trunk/qt-copy/lib/libQtCore.so.4
#9  0xb7ef8ab5 in QMetaObject::activate () from /media/kdedev/trunk/qt-copy/lib/libQtCore.so.4
#10 0xb78f8f48 in KSelectAction::triggered (this=0xc0d71b0, _t1=0) at /media/kdedev/trunk/build/KDE/kdelibs/kdeui/kselectaction.moc:164
#11 0xb78fb88a in KSelectAction::actionTriggered (this=0xc0d71b0, action=0xc0d73c0)
    at /media/kdedev/trunk/src/KDE/kdelibs/kdeui/actions/kselectaction.cpp:312
#12 0xb78fbc7c in KSelectAction::qt_metacall (this=0xc0d71b0, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbf8e020c)
    at /media/kdedev/trunk/build/KDE/kdelibs/kdeui/kselectaction.moc:103
#13 0xb7ef8633 in QMetaObject::activate () from /media/kdedev/trunk/qt-copy/lib/libQtCore.so.4
---Type <return> to continue, or q <return> to quit---
#14 0xb7ef8ab5 in QMetaObject::activate () from /media/kdedev/trunk/qt-copy/lib/libQtCore.so.4
#15 0xb58a4d5c in QActionGroup::triggered () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#16 0xb58a5647 in QActionGroupPrivate::_q_actionTriggered () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#17 0xb58a58c4 in QActionGroup::qt_metacall () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#18 0xb7ef8633 in QMetaObject::activate () from /media/kdedev/trunk/qt-copy/lib/libQtCore.so.4
#19 0xb7ef883c in QMetaObject::activate () from /media/kdedev/trunk/qt-copy/lib/libQtCore.so.4
#20 0xb589f03a in QAction::triggered () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#21 0xb58a0bf6 in QAction::activate () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#22 0xb5cbf318 in QMenuPrivate::activateAction () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#23 0xb5cc1c91 in QMenu::mouseReleaseEvent () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#24 0xb7a95290 in KMenu::mouseReleaseEvent (this=0xc0d7678, e=0xbf8e0bd4) at /media/kdedev/trunk/src/KDE/kdelibs/kdeui/widgets/kmenu.cpp:452
#25 0xb5904e13 in QWidget::event () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#26 0xb5cbcf50 in QMenu::event () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#27 0xb58a6e0d in QApplicationPrivate::notify_helper () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#28 0xb58a798f in QApplication::notify () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#29 0xb79cef6b in KApplication::notify (this=0xbf8e148c, receiver=0xc0d7678, event=0xbf8e0bd4)
    at /media/kdedev/trunk/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:311
#30 0xb7ee388a in QCoreApplication::notifyInternal () from /media/kdedev/trunk/qt-copy/lib/libQtCore.so.4
#31 0xb65fbf0f in QCoreApplication::sendSpontaneousEvent () from /media/kdedev/trunk/qt-copy/lib/libQt3Support.so.4
---Type <return> to continue, or q <return> to quit---
#32 0xb58ab79a in QApplicationPrivate::sendMouseEvent () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#33 0xb5925331 in QETWidget::translateMouseEvent () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#34 0xb5923047 in QApplication::x11ProcessEvent () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#35 0xb594e538 in x11EventSourceDispatch () from /media/kdedev/trunk/qt-copy/lib/libQtGui.so.4
#36 0xb50b85d6 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#37 0xb50bb972 in ?? () from /usr/lib/libglib-2.0.so.0
#38 0x08384c90 in ?? ()
#39 0x00000000 in ?? ()
Comment 1 Marcel Wiesweg 2008-06-30 18:44:08 UTC
SVN commit 826384 by mwiesweg:

Fix QList handling

BUG: 165342


 M  +6 -10     albumfolderview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=826384