Fix QList handling

BUG: 165342

svn path=/trunk/extragear/graphics/digikam/; revision=826384